@@ -14,17 +14,15 @@ public class DMCAnalityczny extends RegulatorMPC {
 
     protected Matrix Mpz;
     protected Matrix Mz;
-    private Matrix K;
     protected List<List<Double>> S;
     protected List<List<Double>> Sz;
     protected Matrix dU;
-
     protected Matrix dUz;
     protected Matrix M;
     protected Matrix Mp;
-
     protected Double[] strojenieZadane;
     protected int liczbaStrojeniaZadanego;
+    private Matrix K;
 
     public DMCAnalityczny() {
     }
@@ -40,10 +38,10 @@ public class DMCAnalityczny extends RegulatorMPC {
     }
 
     public DMCAnalityczny(int Nu, double lambda, SISODPA SISODPA, double cel, double duMax, int N) {
-        this.Lambda = Arrays.asList(lambda);
+        this.Lambda = List.of(lambda);
         this.Nu = Nu;
         this.N = N;
-        this.cel = new double[]{cel};
+        this.cel = new double[] {cel};
         this.duMax = duMax;
         policzWartosci(SISODPA);
 
@@ -85,6 +83,7 @@ public class DMCAnalityczny extends RegulatorMPC {
         dodajdU(Utemp.get(0, 0));
         return Utemp.get(0, 0);
     }
+
     public double policzSterowanie(double aktualna, double[] sterowanieZaklocenia) {
         Matrix yZad = ustawMatrixYZad();
         dodajdUz(sterowanieZaklocenia);
@@ -119,6 +118,7 @@ public class DMCAnalityczny extends RegulatorMPC {
         dodajdU(tempdU);
         return tempdU;
     }
+
     public double[] policzSterowanie(double[] aktualna, double[] sterowanieZaklocenia) {
         int OUT = cel.length;
         dodajdUz(sterowanieZaklocenia);
@@ -153,12 +153,13 @@ public class DMCAnalityczny extends RegulatorMPC {
 
     protected Matrix ustawMatrixYZad() {
         Matrix yZad = new Matrix(cel.length, N);
-        for (int i = 0; i < cel.length; i++)
-            for (int j = 0; j < N; j++)
+        for (int i = 0; i < cel.length; i++) {
+            for (int j = 0; j < N; j++) {
                 yZad.set(i, j, cel[i]);
+            }
+        }
         return yZad;
     }
-
 
 
     protected void policzWartosci(SISODPA SISODPA) {
@@ -167,7 +168,7 @@ public class DMCAnalityczny extends RegulatorMPC {
         policzMp();
         policzM();
         policzK();
-        if(SISODPA.getZakloceniaMierzalne()!=null && !SISODPA.getZakloceniaMierzalne().isEmpty()) {
+        if (SISODPA.getZakloceniaMierzalne() != null && !SISODPA.getZakloceniaMierzalne().isEmpty()) {
             resetujZaklocenia(SISODPA.getZakloceniaMierzalne().size());
             policzSz(SISODPA);
             policzMz(SISODPA.getZakloceniaMierzalne().size(), 1);
@@ -183,7 +184,7 @@ public class DMCAnalityczny extends RegulatorMPC {
         policzMp(MIMODPA.getLiczbaIN(), MIMODPA.getLiczbaOUT());
         policzM(MIMODPA.getLiczbaIN(), MIMODPA.getLiczbaOUT());
         policzK(MIMODPA.getLiczbaIN());
-        if(MIMODPA.getZakloceniaMierzalne()!=null ) {
+        if (MIMODPA.getZakloceniaMierzalne() != null) {
             resetujZaklocenia(MIMODPA.getZakloceniaMierzalne().getLiczbaIN());
             policzSz(MIMODPA);
             policzMz(MIMODPA.getZakloceniaMierzalne().getLiczbaIN(), MIMODPA.getZakloceniaMierzalne().getLiczbaOUT());
@@ -216,22 +217,28 @@ public class DMCAnalityczny extends RegulatorMPC {
     }
 
     public void resetujRegulator() {
-        for (int i = 0; i < dU.getColumnDimension(); i++)
-            for (int j = 0; j < dU.getRowDimension(); j++)
+        for (int i = 0; i < dU.getColumnDimension(); i++) {
+            for (int j = 0; j < dU.getRowDimension(); j++) {
                 dU.set(j, i, 0.0);
-        if(dUz!=null) {
-            for (int i = 0; i < dUz.getColumnDimension(); i++)
-                for (int j = 0; j < dUz.getRowDimension(); j++)
+            }
+        }
+        if (dUz != null) {
+            for (int i = 0; i < dUz.getColumnDimension(); i++) {
+                for (int j = 0; j < dUz.getRowDimension(); j++) {
                     dUz.set(j, i, 0.0);
+                }
+            }
         }
     }
 
     public void resetujRegulator(int IN) {
         dU = new Matrix(1, (D - 1) * IN, 0.0);
     }
+
     public void resetujZaklocenia(int IN) {
         dUz = new Matrix(1, (D) * IN, 0.0);
     }
+
     protected void policzS(SISODPA SISODPA) {
         double U = 1;
         int i = 2;
@@ -251,17 +258,18 @@ public class DMCAnalityczny extends RegulatorMPC {
 
     protected void policzSz(SISODPA obiekt) {
         this.Sz = new ArrayList<>();
-        for(int i = 0; i < obiekt.getZakloceniaMierzalne().size(); i++) {
+        for (int i = 0; i < obiekt.getZakloceniaMierzalne().size(); i++) {
             List<Double> Stemp = new ArrayList<Double>();
             double Utemp = 0;
             obiekt.resetObiektu();
-            Stemp.add(obiekt.obliczKrokZaklocenia(1,i) / 1);
-            for(int j = 1; j<D+1; j++) {
-                Stemp.add(obiekt.obliczKrokZaklocenia(Utemp, i) / 1);
+            Stemp.add(obiekt.obliczKrokZaklocenia(1, i));
+            for (int j = 1; j < D + 1; j++) {
+                Stemp.add(obiekt.obliczKrokZaklocenia(Utemp, i));
             }
             this.Sz.add(Stemp);
         }
     }
+
     protected void policzSz(MIMODPA obiekt) {
         this.Sz = new ArrayList<>();
         for (int i = 0; i < obiekt.getZakloceniaMierzalne().getLiczbaOUT(); i++) {
@@ -272,12 +280,13 @@ public class DMCAnalityczny extends RegulatorMPC {
                 List<Double> Stemp = new ArrayList<>();
                 Stemp.add(obiekt.obliczKrokZaklocenia(U, j, i) / U);
                 for (int k = 1; k < D + 1; k++) {
-                    Stemp.add(obiekt.obliczKrokZaklocenia(Utemp,j, i) / U);
+                    Stemp.add(obiekt.obliczKrokZaklocenia(Utemp, j, i) / U);
                 }
                 this.Sz.add(Stemp);
             }
         }
     }
+
     protected void policzS(MIMODPA obiekt) {
         for (int i = 0; i < obiekt.getLiczbaOUT(); i++) {
             for (int j = 0; j < obiekt.getLiczbaIN(); j++) {
@@ -303,7 +312,7 @@ public class DMCAnalityczny extends RegulatorMPC {
         }
         for (int i = 0; i < S.size(); i++) {
             while (D != S.get(i).size()) {
-                S.get(i).add(S.get(i).get(S.get(i).size()-1));
+                S.get(i).add(S.get(i).get(S.get(i).size() - 1));
             }
         }
         this.N = D;
@@ -313,8 +322,9 @@ public class DMCAnalityczny extends RegulatorMPC {
         Matrix M = new Matrix(N, Nu);
         for (int i = 0; i < Nu; i++) {
             for (int j = 0; j < N; j++) {
-                if (j >= i)
+                if (j >= i) {
                     M.set(j, i, S.get(0).get(j - i));
+                }
             }
         }
         this.M = M;
@@ -324,10 +334,13 @@ public class DMCAnalityczny extends RegulatorMPC {
         Matrix M = new Matrix(N * OUT, Nu * IN);
         for (int i = 0; i < Nu; i++) {
             for (int j = 0; j < N; j++) {
-                if (j >= i)
-                    for (int k = 0; k < OUT; k++)
-                        for (int m = 0; m < IN; m++)
+                if (j >= i) {
+                    for (int k = 0; k < OUT; k++) {
+                        for (int m = 0; m < IN; m++) {
                             M.set(j * OUT + k, i * IN + m, S.get(k * IN + m).get(j - i));
+                        }
+                    }
+                }
             }
         }
         this.M = M;
@@ -337,10 +350,11 @@ public class DMCAnalityczny extends RegulatorMPC {
         Mp = new Matrix(N, D - 1);
         for (int i = 0; i < D - 1; i++) {
             for (int j = 0; j < N; j++) {
-                if ((j + i + 1) < D)
+                if ((j + i + 1) < D) {
                     Mp.set(j, i, S.get(0).get(j + i + 1) - S.get(0).get(i));
-                else
+                } else {
                     Mp.set(j, i, S.get(0).get(D - 1) - S.get(0).get(i));
+                }
             }
         }
     }
@@ -353,47 +367,56 @@ public class DMCAnalityczny extends RegulatorMPC {
                     for (int m = 0; m < IN; m++) {
                         if ((j + i + 1) < D) {
                             Mp.set(j * OUT + k, i * IN + m, S.get(k * IN + m).get(j + i + 1) - S.get(k * IN + m).get(i));
-                        } else
+                        } else {
                             Mp.set(j * OUT + k, i * IN + m, S.get(k * IN + m).get(D - 1) - S.get(k * IN + m).get(i));
+                        }
                     }
                 }
             }
         }
     }
+
     protected void policzMz(int IN, int OUT) {
         Matrix Mz = new Matrix(N * OUT, (D) * IN);
-        for (int i = 0; i < D ; i++) { //wszerz
-            for (int j = -1; j < N-1; j++) { //wzdłuż
-                if(i>1+Nu) {
-                    for (int k = 0; k < OUT; k++)
-                        for (int m = 0; m < IN; m++)
-                            if(j<Nu) {
-                                Mz.set((j+1) * OUT + k, i * IN + m, 0.0);
+        for (int i = 0; i < D; i++) { //wszerz
+            for (int j = -1; j < N - 1; j++) { //wzdłuż
+                if (i > 1 + Nu) {
+                    for (int k = 0; k < OUT; k++) {
+                        for (int m = 0; m < IN; m++) {
+                            if (j < Nu) {
+                                Mz.set((j + 1) * OUT + k, i * IN + m, 0.0);
                             } else {
-                                Mz.set((j+1) * OUT + k, i * IN + m,  Mz.get((j+1) * OUT + k, (i - 1) * IN + m) * 0.6 );
+                                Mz.set((j + 1) * OUT + k, i * IN + m, Mz.get((j + 1) * OUT + k, (i - 1) * IN + m) * 0.6);
                             }
-                } else if (j >= i)
-                    for (int k = 0; k < OUT; k++)
-                        for (int m = 0; m < IN; m++)
-                            if(j - i  >= D) {
-                                Mz.set((j+1) * OUT + k, i * IN + m, Sz.get(k * IN + m).get(D));
+                        }
+                    }
+                } else if (j >= i) {
+                    for (int k = 0; k < OUT; k++) {
+                        for (int m = 0; m < IN; m++) {
+                            if (j - i >= D) {
+                                Mz.set((j + 1) * OUT + k, i * IN + m, Sz.get(k * IN + m).get(D));
                             } else {
-                                Mz.set((j+1) * OUT + k, i * IN + m, Sz.get(k * IN + m).get(j - i + 1));
+                                Mz.set((j + 1) * OUT + k, i * IN + m, Sz.get(k * IN + m).get(j - i + 1));
                             }
+                        }
+                    }
+                }
             }
         }
         this.Mz = Mz;
     }
+
     protected void policzMpz(int IN, int OUT) {
         Mpz = new Matrix(N * OUT, (D) * IN);
         //pierwsza kolumna
         for (int j = 0; j < N; j++) {
             for (int k = 0; k < OUT; k++) {
                 for (int m = 0; m < IN; m++) {
-                    if (j  <=  D ) {
+                    if (j <= D) {
                         Mpz.set(j * OUT + k, m, Sz.get(k * IN + m).get(j));
-                    } else
+                    } else {
                         Mpz.set(j * OUT + k, m, Sz.get(k * IN + m).get(D));
+                    }
                 }
             }
         }
@@ -402,10 +425,11 @@ public class DMCAnalityczny extends RegulatorMPC {
             for (int j = 0; j < N; j++) {
                 for (int k = 0; k < OUT; k++) {
                     for (int m = 0; m < IN; m++) {
-                        if ((j + i + 1) < D+1) {
+                        if ((j + i + 1) < D + 1) {
                             Mpz.set(j * OUT + k, (i + 1) * IN + m, (Sz.get(k * IN + m).get(j + i + 1) - Sz.get(k * IN + m).get(i)));
-                        } else
+                        } else {
                             Mpz.set(j * OUT + k, (i + 1) * IN + m, (Sz.get(k * IN + m).get(D) - Sz.get(k * IN + m).get(i)));
+                        }
                     }
                 }
             }
@@ -419,8 +443,9 @@ public class DMCAnalityczny extends RegulatorMPC {
             for (int j = 0; j < Nu; j++) {
                 if (i == j) {
                     I.set(i, j, getLambda().get(0));
-                } else
+                } else {
                     I.set(i, j, 0);
+                }
             }
         }
         this.K = ((M.transpose().times(M).plus(I)).inverse()).times(M.transpose());
@@ -433,8 +458,9 @@ public class DMCAnalityczny extends RegulatorMPC {
                 for (int m = 0; m < IN; m++) {
                     if (i == j) {
                         I.set(i * IN + m, j * IN + m, getLambda().get(m));
-                    } else
+                    } else {
                         I.set(i * IN + m, j * IN + m, 0);
+                    }
                 }
             }
         }
@@ -442,8 +468,9 @@ public class DMCAnalityczny extends RegulatorMPC {
     }
 
     protected void dodajdU(double dUAktualne) {
-        for(int i = D-1; i > D - 11; i-- )
-            dU.set(0, i-1, (dU.get(0,  i-1) + 3*dU.get(0, i-2))/4 );
+        for (int i = D - 1; i > D - 11; i--) {
+            dU.set(0, i - 1, (dU.get(0, i - 1) + 3 * dU.get(0, i - 2)) / 4);
+        }
         for (int i = D - 11; i > 1; i--) {
             dU.set(0, i - 1, dU.get(0, i - 2));
         }
@@ -451,14 +478,16 @@ public class DMCAnalityczny extends RegulatorMPC {
     }
 
     protected void dodajdUz(double[] sterowanieZaklocenia) {
-        if(sterowanieZaklocenia.length>1) {
+        if (sterowanieZaklocenia.length > 1) {
             for (int i = D - 1; i > 1; i--) {
-                for (int j = sterowanieZaklocenia.length - 1; j >= 0; j--)
+                for (int j = sterowanieZaklocenia.length - 1; j >= 0; j--) {
                     dUz.set(0, sterowanieZaklocenia.length * i - 1 - j, dUz.get(0, sterowanieZaklocenia.length * i - sterowanieZaklocenia.length - j - 1));
+                }
             }
 
-            for (int j = sterowanieZaklocenia.length - 1; j >= 0; j--)
-                dUz.set(0, j, sterowanieZaklocenia[sterowanieZaklocenia.length-j-1]);
+            for (int j = sterowanieZaklocenia.length - 1; j >= 0; j--) {
+                dUz.set(0, j, sterowanieZaklocenia[sterowanieZaklocenia.length - j - 1]);
+            }
 
         } else {
             for (int i = D; i > 1; i--) {
@@ -471,12 +500,14 @@ public class DMCAnalityczny extends RegulatorMPC {
     protected void dodajdU(double[] dUAktualne) {
 
         for (int i = D - 1; i > 1; i--) {
-            for (int j = dUAktualne.length - 1; j >= 0; j--)
-                dU.set(0, dUAktualne.length * i  - j - 1, dU.get(0, dUAktualne.length * i - dUAktualne.length - j - 1));
+            for (int j = dUAktualne.length - 1; j >= 0; j--) {
+                dU.set(0, dUAktualne.length * i - j - 1, dU.get(0, dUAktualne.length * i - dUAktualne.length - j - 1));
+            }
         }
 
-        for (int j = 0; j < dUAktualne.length ; j++)
+        for (int j = 0; j < dUAktualne.length; j++) {
             dU.set(0, j, dUAktualne[j]);
+        }
 
     }
 
